# ai-idps

./: .gitignore  .gitmodules  Makefile  README.md
cloud/: Makefile  docker-compose.yml
cloud/backend/: .env.example  Dockerfile  pyproject.toml
cloud/backend/app/: __init__.py  config.py  main.py
cloud/backend/app/core/: __init__.py  redis_keys.py
cloud/backend/app/models/: __init__.py  attack_test.py  probe_protocol.py  probe_task.py  rule.py  rule_category.py
cloud/backend/app/routers/: __init__.py  attacks.py  logs.py  probe.py  probes.py  rules.py  websocket.py
cloud/backend/app/schemas/: __init__.py  attack_test.py  rule_update.py
cloud/backend/app/services/: attack_test_service.py  clickhouse_service.py  log_service.py  mysql_service.py  probe_rule_service.py  probe_service.py  probe_task_service.py  redis_service.py  rule_category_service.py  rule_comparator_service.py  rule_download_service.py  rule_parser_service.py  rule_service.py  rule_version_service.py  websocket_service.py
cloud/backend/tests/: conftest.py  test_rule_update_api.py
cloud/backend/tests/integration/: test_attack_test_flow.py  test_probe_communication.py  test_rule_update_flow.py
cloud/clickhouse/: init.sql
cloud/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
cloud/frontend/src/: App.tsx  index.css
cloud/mysql/: init.sql
cloud/mysql/migrations/: 001_add_rule_count_columns.sql
cloud/nginx/: nginx.conf
fixtures/: test.rest  test_api.sh
fixtures/nids_tests/: README.md  requirements.txt  run_all_tests.sh  run_nids_tests.py  test_malware_traffic.sh  test_manager_comm.py  test_port_scan.sh  test_protocol_anomaly.sh  test_stress.sh  test_web_attacks.sh
fixtures/probe_blackbox_tests/: README.md  __init__.py  cloud_client.py  probe_simulator.py  requirements.txt  run_tests.py  test_cloud_communication.py  test_probe_connection.py  test_stress.py
probe/: CMakeLists.txt
probe/attack_tool/: CMakeLists.txt
probe/attack_tool/config/: attack_tool.json
probe/attack_tool/include/: attack_tool.h  config.h  socket_client.h  task_executor.h
probe/attack_tool/include/generators/: attack_generator.h  http_generator.h  tcp_generator.h  udp_generator.h
probe/attack_tool/src/: attack_tool.cpp  main.cpp  socket_client.cpp  task_executor.cpp
probe/attack_tool/src/generators/: http_generator.cpp  tcp_generator.cpp  udp_generator.cpp
probe/common/: CMakeLists.txt
probe/common/include/: json.hpp  logger.h  probe_base.h  protocol.h
probe/common/src/: protocol.cpp
probe/manager/: CMakeLists.txt  config.example.json
probe/manager/include/: cloud_client.h  config.h  epoll_server.h  log_aggregator.h  probe_connection.h  rule_manager.h
probe/manager/src/: cloud_client.cpp  config.cpp  epoll_server.cpp  log_aggregator.cpp  main.cpp  probe_connection.cpp  rule_manager.cpp
probe/nids/: CMakeLists.txt  config.example.json
probe/nids/include/: eve_parser.h  nids_probe.h  socket_client.h  suricata_manager.h
probe/nids/src/: eve_parser.cpp  main.cpp  nids_probe.cpp  socket_client.cpp  suricata_manager.cpp
scripts/: download-et-rules.sh  integration_tests.py  nids-probe.service  performance_tests.py  probe-manager.service
specs/: 0001-spec.md  0002-implementation-plan.md  0003-rule.md  0004-design.md  0005-rule-spec.md  0006-implementation-plan.md  instructions.md  stripe-style.md
(+25 files in other folders)
